aris_logs/team1.1221818.error.log
Traceback (most recent call last):
  File "/users/pa19/gealexdl/team1/ganspace/visualize.py", line 25, in <module>
    from models import get_instrumented_model
  File "/users/pa19/gealexdl/team1/ganspace/models/__init__.py", line 11, in <module>
    from .wrappers import *
  File "/users/pa19/gealexdl/team1/ganspace/models/wrappers.py", line 318
    def load_model(self):
    ^
IndentationError: unexpected indent
srun: error: gpu02: task 0: Exited with exit code 1
srun: Terminating job step 1221818.0
